unpackaged/main/default/objects/Return_Order_Line_Item__c/Return_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Return Order Line Item</label>
    <nameField>
        <displayFormat>RLI-{YY}{00000}{MM}</displayFormat>
        <label>Return Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>