unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>