unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Customer_price__c.field-meta.xml
<CustomField>
    <fullName>Customer_price__c</fullName>
    <formula>Ordered_Part_Id__r.CustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order Part Price</inlineHelpText>
    <label>Customer price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>