unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request__c</fullName>
    <label>Customer Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remake</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>