unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/CustomerPartID__c.field-meta.xml
<CustomField>
    <fullName>CustomerPartID__c</fullName>
    <description>Customer Part ID on the Ordered Part Object</description>
    <formula>Ordered_Part_Id__r.CustomerPartID__c</formula>
    <inlineHelpText>Customer Part ID on the Ordered Part Object</inlineHelpText>
    <label>Customer Part ID</label>
    <type>Text</type>
</CustomField>