unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Defect_origin__c.field-meta.xml
<CustomField>
    <fullName>Defect_origin__c</fullName>
    <label>Defect origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Xometry</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>