unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>Not RMA</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>