unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Established_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Established_Next_Steps__c</fullName>
    <label>Established Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Remake</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Courtesy remake</fullName>
            </value>
            <value>
                <fullName>Courtesy refund</fullName>
            </value>
            <value>
                <fullName>Courtesy rework</fullName>
            </value>
            <value>
                <fullName>Courtesy credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>