unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Id</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>