unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Ops_Order__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>