unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Ordered_Part_Id__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Part_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered Part ID</label>
    <referenceTo>Ordered_Part__c</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>