unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/OrderedPartStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderedPartStatus__c</fullName>
    <description>Ordered Part Status</description>
    <formula>TEXT(Ordered_Part_Id__r.PartStatus__c)</formula>
    <label>Ordered Part Status</label>
    <type>Text</type>
</CustomField>