unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <formula>TEXT(Ordered_Part_Id__r.Process__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process</label>
    <type>Text</type>
</CustomField>