unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/QE_Comments__c.field-meta.xml
<CustomField>
    <fullName>QE_Comments__c</fullName>
    <label>QE Comments</label>
    <type>TextArea</type>
</CustomField>