unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Quantity_Expected__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Expected__c</fullName>
    <label>Quantity Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>