unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <label>Reason For Rejection</label>
    <type>TextArea</type>
</CustomField>