unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/ReasonReturn__c.field-meta.xml
<CustomField>
    <fullName>ReasonReturn__c</fullName>
    <label>Reason For Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts out of specification - Dimensions/Tolerances</fullName>
            </value>
            <value>
                <fullName>Parts missing required features</fullName>
            </value>
            <value>
                <fullName>Parts damaged - Shipping damage</fullName>
            </value>
            <value>
                <fullName>Parts damaged - Poor packaging</fullName>
            </value>
            <value>
                <fullName>Poor part quality - Finish, Color, Appearance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>