unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No live review</fullName>
            </value>
            <value>
                <fullName>More info needed - customer</fullName>
            </value>
            <value>
                <fullName>More info needed - partner</fullName>
            </value>
            <value>
                <fullName>Schedule next live review</fullName>
            </value>
            <value>
                <fullName>Live review completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>