unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/RMA_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>RMA_Manager_Notes__c</fullName>
    <label>RMA Manager Notes</label>
    <type>TextArea</type>
</CustomField>