unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/RMA_Order__c.field-meta.xml
<CustomField>
    <fullName>RMA_Order__c</fullName>
    <label>RMA Order</label>
    <referenceTo>RMA_Order__c</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>Return_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>