unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Root_Cause_Notes__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Notes__c</fullName>
    <label>Root Cause Notes</label>
    <type>TextArea</type>
</CustomField>