unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Supplier_Group__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Group__c</fullName>
    <formula>IF(
	Job_Id__r.Supplier__r.ChinaGroup__c, 
	'China Group', 
	IF(
		Job_Id__r.Supplier__r.PremiumGroup__c, 
		'Premium Group', 
		IF(
			Job_Id__r.Supplier__r.UltraPremiumGroup__c, 
			'Ultra Premium Group', 
			null
		)
	)  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Group</label>
    <type>Text</type>
</CustomField>