unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Supplier_Partner__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Partner__c</fullName>
    <formula>Job_Id__r.SupplierName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Partner</label>
    <type>Text</type>
</CustomField>