unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Supplier_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Partner_Id__c</fullName>
    <formula>Job_Id__r.Supplier__r.PartnerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Partner Id</label>
    <type>Text</type>
</CustomField>