unpackaged/main/default/objects/Return_Order_Line_Item__c/fields/Supplier_Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quality_Rating__c</fullName>
    <formula>Job_Id__r.Supplier__r.QualityRating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Quality Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>