unpackaged/main/default/objects/Return_Order_Line_Item__c/validationRules/valideQuantityExpected.validationRule-meta.xml
<ValidationRule>
    <fullName>valideQuantityExpected</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_Expected__c &gt;  Ordered_Part_Id__r.QuantityOrdered__c</errorConditionFormula>
    <errorDisplayField>Quantity_Expected__c</errorDisplayField>
    <errorMessage>The expected quantity cannot exceed the ordered quantity of the ordered part</errorMessage>
</ValidationRule>